// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should render button component contained 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderRadius": 42,
      },
      Object {
        "shadowColor": "#AEAEAE",
      },
    ]
  }
  testID="button"
  type="contained"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontFamily": "doc robot",
          "fontSize": 14,
          "fontWeight": "600",
          "letterSpacing": 1,
        },
      ]
    }
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Should render button component outlined 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderColor": "#FFFFFF",
        "borderRadius": 42,
        "borderWidth": 1,
      },
      Object {},
    ]
  }
  testID="button"
  type="outlined"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontFamily": "doc robot",
          "fontSize": 14,
          "fontWeight": "600",
          "letterSpacing": 1,
        },
      ]
    }
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Should render button component text 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderRadius": 42,
      },
      Object {},
    ]
  }
  testID="button"
  type="text"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontFamily": "doc robot",
          "fontSize": 14,
          "fontWeight": "600",
          "letterSpacing": 1,
        },
      ]
    }
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;
